[project]
name = "ad-image-concatenation-advanced"
description = "Advanced image concatenation node for ComfyUI with flexible grid layouts, padding, and styling options."
version = "1.0.0"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/BigStationW/Comfyui-AD-Image-Concatenation-Advanced"
Documentation = "https://github.com/BigStationW/Comfyui-AD-Image-Concatenation-Advanced/wiki"
"Bug Tracker" = "https://github.com/BigStationW/Comfyui-AD-Image-Concatenation-Advanced/issues"

[tool.comfy]
PublisherId = "bigstationw"
DisplayName = "Comfyui-AD-Image-Concatenation-Advanced"
Icon = ""
includes = []
